@@ -109,6 +109,7 @@ class Packetery extends CarrierModule
             return false;
         }
         Configuration::updateValue('PACKETERY_LABEL_FORMAT', 'A7 on A4');
+        Configuration::updateValue('PACKETERY_ADDRESS_VALIDATION', 'none');
 
         // backup possible old order table
         if (count($db->executeS('SHOW TABLES LIKE "' . _DB_PREFIX_ . 'packetery_order"')) > 0) {
@@ -160,6 +161,7 @@ class Packetery extends CarrierModule
             !Configuration::deleteByName('PACKETERY_APIPASS') ||
             !Configuration::deleteByName('PACKETERY_ESHOP_ID') ||
             !Configuration::deleteByName('PACKETERY_LABEL_FORMAT') ||
+            !Configuration::deleteByName('PACKETERY_ADDRESS_VALIDATION') ||
             !Configuration::deleteByName('PACKETERY_LAST_BRANCHES_UPDATE')
         ) {
             return false;
@@ -251,6 +253,7 @@ class Packetery extends CarrierModule
             'PACKETERY_APIPASS',
             'PACKETERY_ESHOP_ID',
             'PACKETERY_LABEL_FORMAT',
+            'PACKETERY_ADDRESS_VALIDATION',
             'PACKETERY_LAST_BRANCHES_UPDATE',
         ]);
 
@@ -418,6 +421,13 @@ class Packetery extends CarrierModule
             ];
             $this->context->smarty->assign('messages', $messages);
         }
+
+        $addressValidationOptions = [
+            'none' => $this->l('Do not use address validation'),
+            'optional' => $this->l('Optional address validation'),
+            'required' => $this->l('Require address validation'),
+        ];
+        $this->context->smarty->assign('addressValidationOptions', $addressValidationOptions);
 
         $output = $this->context->smarty->fetch($this->local_path.'views/templates/admin/configure.tpl');
         $output .= $this->context->smarty->fetch($this->local_path.'views/templates/admin/prestui/ps-tags.tpl');
